fix(tree-map): fix info text overflow

--- a/src/scripts/components/stories/story/blocks/story-eei/modules/tree-map/tree-map-grid/tree-map-grid.module.css
+++ b/src/scripts/components/stories/story/blocks/story-eei/modules/tree-map/tree-map-grid/tree-map-grid.module.css
@@ -1,7 +1,6 @@
 .gridContainer {
   width: 100%;
-  margin-block: 25px;
-  aspect-ratio: 1.2;
+  height: 100%;
   display: flex;
   flex-direction: column;
   border: 2px solid var(--main-colours-esa-teal-55);
